--- a/quickstart.html
+++ b/quickstart.html
@@ -18,9 +18,8 @@
 </head>
 
 <body>
-    <h1>Leaflet tests</h1>
-    <p><a href=./quickstart.html>quickstart</a></p>
-    <p><a href=./cursorIcons.html>cursorIcons</a></p>
+    <div id="map"></div>
+    <script type="text/javascript" src="./js/leafer.js"></script>
 </body>
 
 </html>
